# logviewer

./: .gitignore  .gitmodules  CMakeLists.txt
include/: filterdialog.h  filterdialog.hxx  filtersettings.h  filtersettings.hxx  mainwindow.h  mainwindow.hxx  message.h  message.hxx  messageserver.h  messageserver.hxx
src/: filterdialog.cpp  filterdialog.cxx  filterdialog.ui  filtersettings.cpp  filtersettings.cxx  mainwindow.cpp  mainwindow.cxx  mainwindow.ui  message.cpp  message.cxx  messageserver.cpp  messageserver.cxx
